--- a/Logic/Logic.csproj
+++ b/Logic/Logic.csproj
@@ -35,5 +35,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Include="Board.cs" />
+    <Compile Include="Enums.cs" />
+    <Compile Include="GameLogic.cs" />
+    <Compile Include="Player.cs" />
+    <Compile Include="PlayerTurnInfo.cs" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
