--- a/Logic/Logic.csproj
+++ b/Logic/Logic.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="Board.cs" />
     <Compile Include="Enums\eBoardSigns.cs" />
+    <Compile Include="Enums\eLevelDifficulty .cs" />
     <Compile Include="Enums\ePlayerType.cs" />
     <Compile Include="GameLogic.cs" />
     <Compile Include="Player.cs" />
